newclay/test/Compiler/StaticEvaluator/Fail/SelfImportNonexistentSymbol/main.clay
import __primitives__.*;
import FailSelfImportNonexistentSymbol.*;

define Main;
overload #Main() = Factorial(8);
